--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,4 +101,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Created by anmol sinha"
+        tools:layout_editor_absoluteX="136dp"
+        tools:layout_editor_absoluteY="674dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
